Refactor error handling and improve thread safety across various components. Implement virtual threads for initialization and update checking in DiscordSRV, enhance message deletion in DiscordUtil, and ensure atomic file operations in AppendOnlyFileAccountLinkManager. Update command dispatching in DiscordChatListener to normalize command names and optimize player collection handling in JdbcAccountLinkManager. Introduce ReentrantLock for thread safety in ExpiringDualHashBidiMap and DiscordChatChannelCommandFeedbackForwarder.